--- a/app/css/login.css
+++ b/app/css/login.css
@@ -40,6 +40,7 @@ body{
     border: none;
     border-bottom: 1px solid white;
     background: transparent;
+    color: white;
 }
 .submit{
 	width: 10em;
