--- a/app/css/mainpageUI.css
+++ b/app/css/mainpageUI.css
@@ -9,7 +9,7 @@
 .navbar-left{
 	height: 100%;
 	color: white;
-	background: #6441A5;  /* fallback for old browsers */
+	background: #6441A5;
 	background: -webkit-linear-gradient(#2a0845, #6441A5);  /* Chrome 10-25, Safari 5.1-6 */
 	background: linear-gradient(#2a0845, #6441A5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
@@ -40,7 +40,6 @@
 .navbar-left__completed:hover, .navbar-left__addCourse:hover, .navbar-left__editBid:hover, .navbar-left__dropCourse:hover, .navbar-left__logout:hover{
 	background: white;
 	color: #6441A5;
-	/*border-radius: 30px;*/
 }
 .display-right__table-dates, .display-right__table-cart, .display-right__table-enrolment{
 	padding: 20px;
