--- a/app/css/adminUI.css
+++ b/app/css/adminUI.css
@@ -6,7 +6,7 @@
 	grid-template-areas: "navbar-left display-right";
 	grid-auto-columns: 0.5fr 3fr;
 	width: 100%;
-	height: 100%;
+	/*height: 100%;*/
 }
 .navbar-left{
 	height: 100%;
@@ -15,8 +15,6 @@
 	background: -webkit-linear-gradient(#8380B8, #0D1060);
 	background: linear-gradient(#8380B8, #0D1060); 
 }
-
-
 .navbar-left__profile, .navbar-left__logout, .navbar-left__smuLogo{
 	padding: 15px;
 	text-align: right;
@@ -52,16 +50,73 @@
 }
 
 .display-right__bidSystem{
-	width: 100%;
-	height: 20%;
+	padding: 0 20px 0 20px;
 }
 .display-right__bidInfo{
-	width: 100%;
-	height: 60%;
-
+	padding: 20px 20px 0 20px;
 }
 .display-right__allInfo{
-	width: 100%;
-	height: 20%;
+	padding: 20px 20px 0 20px;
 	/*add css for class here*/
+}
+.form-container{
+	padding: 2em;
+}
+.form-container form{
+	border-radius: 0 0 10px 10px;
+	-webkit-box-shadow: 5px 5px 7px 0px rgba(13,16,96,0.5);
+	-moz-box-shadow: 5px 5px 7px 0px rgba(13,16,96,0.5);
+	box-shadow: 5px 5px 7px 0px rgba(13,16,96,0.5);
+}
+.form-header{
+	width: 100%;
+    height: 3em;
+    background: #0D1060;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(#8380B8, #0D1060);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(#8380B8, #0D1060);
+	color: white;
+	border-radius: 10px 10px 0 0;
+	text-align: center;
+}
+.form-group{
+	padding: 0.5em;
+    display: inline-block;
+    width: 45%;
+    text-align: center;
+}
+.form-group span{
+	display: block;
+	font-weight: bold;
+	font-size: large;
+}
+.form-header p{
+	margin: 0;
+    font-size: larger;
+    padding-top: 0.5em;
+    padding-left: 1em;
+}
+.form-control{
+	width: 15em;
+    height: 2em;
+    border-radius: 5px;
+    border: 1px solid grey;
+}
+.form-btn{
+	border-radius: 10px;
+    border: none;
+    height: 3em;
+    cursor: pointer;
+    margin-left: 10px;
+}
+table {
+    border: 1px solid #D6D5E4;
+    -webkit-box-shadow: 6px 6px 10px 3px rgba(214,213,228,1);
+    -moz-box-shadow: 6px 6px 10px 3px rgba(214,213,228,1);
+    box-shadow: 3px 3px 7px 2px rgba(214,213,228,1);
+    width: 100%;
+}
+.table-title{
+	/*text-align: center;*/
+    font-size: x-large;
+    color: #0D1060;
 }
