--- a/app/css/deletebid.css
+++ b/app/css/deletebid.css
@@ -22,7 +22,6 @@
     text-align: center;
 }
 .close-button {
-    float: center;
     width: 7rem;
     line-height: 1.5rem;
     text-align: center;
@@ -35,9 +34,14 @@
 .close-button:hover {
     background-color: darkgray;
 }
-
+.btn-wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 .drop-button {
-    float: center;
     width: 7rem;
     line-height: 1.5rem;
     text-align: center;
@@ -51,7 +55,6 @@
 .drop-button:hover {
     background-color: darkgray;
 }
-
 
 .show-modal {
     opacity: 1;
