changed Drop Section modal box
Co-Authored-By: tvngo2018 <tvngo2018@users.noreply.github.com>

--- a/app/css/dropSection.css
+++ b/app/css/dropSection.css
@@ -22,7 +22,6 @@
     text-align: center;
 }
 .close-button {
-    float: center;
     width: 7rem;
     line-height: 1.5rem;
     text-align: center;
@@ -37,7 +36,6 @@
 }
 
 .drop-button {
-    float: center;
     width: 7rem;
     line-height: 1.5rem;
     text-align: center;
@@ -58,4 +56,12 @@
     visibility: visible;
     transform: scale(1.0);
     transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.btn-wrapper{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
