--- a/app/css/adminUI.css
+++ b/app/css/adminUI.css
@@ -107,12 +107,15 @@
     height: 3em;
     cursor: pointer;
 }
-table {
+/* table {
     border: 1px solid #D6D5E4;
     -webkit-box-shadow: 6px 6px 10px 3px rgba(214,213,228,1);
     -moz-box-shadow: 6px 6px 10px 3px rgba(214,213,228,1);
     box-shadow: 3px 3px 7px 2px rgba(214,213,228,1);
     width: 100%;
+} */
+table {
+	width: 100%;
 }
 .table-title{
 	/*text-align: center;*/
@@ -120,4 +123,13 @@ table {
     color: #0D1060;
 }
 
+.bid-table {
+	width: 0;
+}
 
+.table-button {
+	width: 100%;
+    height: 2em;
+    border-radius: 10px;
+	border: none;
+}
