--- a/app/css/adminUI.css
+++ b/app/css/adminUI.css
@@ -6,7 +6,7 @@
 	grid-template-areas: "navbar-left display-right";
 	grid-auto-columns: 0.5fr 3fr;
 	width: 100%;
-	/*height: 100%;*/
+	height: 100%;
 }
 .navbar-left{
 	height: 100%;
@@ -22,10 +22,18 @@
 .navbar-left__logout{
 	font-size: small;
 }
+.navbar-left__logout:hover{
+	background: white;
+	color: #0D1060;
+}
 .profile-picture{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding: 1em 1em 0 1em;
+}
+.profile-details{
+	padding-bottom: 15px;
 }
 .profile-details p{
 	text-align: center;
